# DraftMind

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  _find_log.ps1  _probe_news.ps1  _show_frontend_log.ps1  _show_log.ps1  backend_LOG  start_all.bat  start_all.ps1  stop_all.bat  stop_all.ps1
backend/: _boot.py  _daemon_launcher.py  _espn_sample.json  _news_smoke.py  _smoke.py  _smoke2.py  _smoke3.py  _start_backend.bat  _start_backend.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  draft.py  manual_note.py  news.py  projection.py  prospect.py  report.py  roster.py  scouting.py  team.py
backend/app/routers/: agent.py  evidence.py  health.py  news.py  prospects.py  recommendations.py  scouting.py  simulations.py  teams.py
backend/app/schemas/: agent.py  embedding.py  evidence.py  news.py  projection.py  prospect.py  recommendation.py  scouting.py  simulation.py  team.py  vector_store.py
backend/app/services/: __init__.py  agent_service.py  balldontlie_service.py  draft_day_accuracy.py  embedding_service.py  evidence_chunk_mapper.py  evidence_chunker.py  (+24 more)
backend/docs/: rag_v0_explanation_safety.md
backend/scripts/: audit_projection_coverage.py  cleanup_duplicate_prospects.py  evaluate_draft_accuracy.py  import_2026_consensus_projection.py  import_2026_draft_order.py  import_balldontlie.py  import_nba_prospects.py  import_nba_rosters.py  import_news.py  import_projection_board.py  migrate_add_stats_provenance.py  migrate_projection_check_constraints.py  seed_db.py  seed_manual_notes.py
(+91 files in other folders)
