[project]
name = "draftmind-backend"
version = "0.1.0"
description = "FastAPI backend for DraftMind NBA draft decision agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.30",
    "nba_api>=1.6.1",
    "requests>=2.32.0",
    "openai>=1.50.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "feedparser>=6.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
